<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Junamex</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_example" translatable="false">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="parse_application_key" translatable="false">vngVuNe897up4BW8iPw0j89NsQMGOjYl5qaV8E0U</string>
    <string name="parse_client_key" translatable="false">ANNIg3Rr9dZ2tZ2uhDl7lDPSVTwfnkYCEhCnFTGi</string>
    <string name="maps_key" translatable="false">AIzaSyCHKTHxUcJkRT4-1VuwKa7DcGcU24hmwhM</string>
    <string name="facebook_app_id" translatable="false">331558627039469</string>
    <string name="speakers_header">Speakers</string>
    <string name="event_detail_subtitle">%1$s in %2$s</string>
    <string name="show_map">Show map</string>

    <string name="schedule">Schedule</string>
    <string name="map">Map</string>
    <string name="social_feed">Social feed</string>
    <string name="people_met">People I\'ve met</string>
    <string name="wesley_museum">Wesley museum</string>
    <string name="dummy_string">list_divider</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="countdown">Countdown</string>

    <string-array name="navigation_drawer_items" translatable="false">
        <item>@string/schedule</item>
        <item>@string/map</item>
        <item>@string/social_feed</item>
        <item>@string/people_met</item>
        <item>@string/wesley_museum</item>
        <item>@string/dummy_string</item>
        <item>@string/settings</item>
        <item>@string/about</item>
        <item>@string/countdown</item>
    </string-array>

    <string-array name="navigation_drawer_icons" translatable="false">
        <item>@drawable/schedule</item>
        <item>@drawable/map</item>
        <item>@drawable/facebook</item>
        <item>@drawable/contacts</item>
        <item>@drawable/museum</item>
        <item>list_divider</item>
        <item>@drawable/settings</item>
        <item>@drawable/about</item>
        <item>@drawable/countdown</item>
    </string-array>

    <string-array name="avatars" translatable="false">
        <item>@drawable/avatar1</item>
        <item>@drawable/avatar2</item>
        <item>@drawable/avatar3</item>
        <item>@drawable/avatar4</item>
        <item>@drawable/avatar5</item>
        <item>@drawable/avatar6</item>
        <item>@drawable/avatar7</item>
        <item>@drawable/avatar8</item>
        <item>@drawable/avatar9</item>
        <item>@drawable/avatar10</item>
    </string-array>

    <string name="rate_session">Rate</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="nothing_to_see">Nothing here yet. Come back later!</string>
    <string name="error_loading">Uh oh, something went wrong.\nTap to retry</string>
    <string name="edit">Edit</string>
    <string name="edit_contact">Edit contact</string>
    <string name="default_name">My profile</string>
    <string name="no_people">No contacts found. Why don\'t you add someone?</string>
    <string name="notes">Notes</string>
    <string name="district">District</string>
    <string name="district_list">"District: "</string>
    <string name="name">Name</string>
    <string name="save_event">Save event</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="notification_enabled">Event notification enabled</string>
    <string name="notification_disabled">Event notification disabled</string>

    <string-array name="districts" translatable="false">
        <item>Norte</item>
        <item>Noroccidental</item>
        <item>Noreste</item>
        <item>Huasteca</item>
        <item>Oriente</item>
        <item>Golfo</item>
        <item>Centro</item>
        <item>Occidente</item>
        <item>Olmeca</item>
        <item>Sur</item>
        <item>Sur fronterizo</item>
        <item>Sierra</item>
        <item>Sur pacífico</item>
        <item>Oaxaca</item>
        <item>Oaxaca norponiente</item>
    </string-array>

    <string name="tutorial_first_page">Welcome to Junamex 2015</string>
    <string name="tutorial_first_page_subtitle">Find the best content of our national camp.\n\nTake a tour of the app</string>
    <string name="tutorial_second_page">Don\'t miss your event!</string>
    <string name="tutorial_second_page_subtitle">Find the schedule for the week and get reminders of the main events</string>
    <string name="tutorial_third_page">Be in the right place</string>
    <string name="tutorial_third_page_subtitle">First time in Club Dorados?\nNo problem! With the map you\'ll always find your way</string>
    <string name="tutorial_fourth_page">#junamex\n#comeback</string>
    <string name="tutorial_fourth_page_subtitle">See what Junamex is doing in facebook</string>
    <string name="tutorial_fifth_page">Make new friends</string>
    <string name="tutorial_fifth_page_subtitle">Share your info and save new friends. Just scan and save!</string>
    <string name="tutorial_sixth_page">One click away, all the time</string>
    <string name="tutorial_sixth_page_subtitle">Add the widget to your home screen and have the daily schedule always at hand</string>
    <string name="junamex_website" translatable="false">http://www.comeback.com.mx</string>
    <string name="version">"Version: "</string>
    <string name="comeback_web">Comeback on the web</string>
    <string name="comeback_facebook">Comeback on facebook</string>

    <string-array name="tutorial_titles">
        <item>@string/tutorial_first_page</item>
        <item>@string/tutorial_second_page</item>
        <item>@string/tutorial_third_page</item>
        <item>@string/tutorial_fourth_page</item>
        <item>@string/tutorial_fifth_page</item>
        <item>@string/tutorial_sixth_page</item>
    </string-array>

    <string-array name="tutorial_subtitles">
        <item>@string/tutorial_first_page_subtitle</item>
        <item>@string/tutorial_second_page_subtitle</item>
        <item>@string/tutorial_third_page_subtitle</item>
        <item>@string/tutorial_fourth_page_subtitle</item>
        <item>@string/tutorial_fifth_page_subtitle</item>
        <item>@string/tutorial_sixth_page_subtitle</item>
    </string-array>

    <string-array name="tutorial_images" translatable="false">
        <item>@drawable/camp_logo</item>
        <item>@drawable/tutorial_page_one</item>
        <item>@drawable/tutorial_page_two</item>
        <item>@drawable/tutorial_page_three</item>
        <item>@drawable/tutorial_page_four</item>
        <item>@drawable/tutorial_page_five</item>
    </string-array>

    <string-array name="share_options">
        <item>@string/share_options_text</item>
        <item>@string/share_options_gallery</item>
        <item>@string/share_options_photo</item>
        <item>@string/share_options_video</item>
    </string-array>

    <string name="share_app">Share app</string>
    <string name="rate_app">Rate app</string>
    <string name="show_tutorial">See tutorial</string>
    <string name="share_text">Check the official Junamex app! It\'s amazing!</string>
    <string name="zxing_scanner_message">Place a QR code in the square to scan it</string>
    <string name="notifications">Notifications</string>
    <string name="get_event_alert">Get event alert:</string>
    <string name="data_usage">Data usage</string>
    <string name="auto_refresh">Auto (Uses more data)</string>
    <string name="manual_refresh" translatable="false">Manual </string>

    <string name="data_refresh_rate">Update data</string>
    <string name="till_junamex">remaining till Junamex</string>
    <string name="vibration_enabled">Vibrate</string>
    <string name="see_facebook_timeline">View profile</string>
    <string name="not_logged_in_warning">Couldn\'t connect with Facebook. Some features will be disabled.</string>
    <string name="facebook" translatable="false">Facebook</string>

    <string name="share_options_dialog_title">What are you gonna share?</string>
    <string name="share_options_text">Status</string>
    <string name="share_options_gallery">Gallery</string>
    <string name="share_options_photo">Photo</string>
    <string name="share_options_video" translatable="false">Video</string>
    <string name="hashtag1" translatable="false">#junamex</string>
    <string name="hashtag2" translatable="false">#comeback</string>
    <string name="email" translatable="false">Email</string>
    <string name="phone">Phone</string>
    <string name="share">Share info</string>
    <string name="notification_title">Don\'t be late! Starting soon:</string>
    <string name="day">Day</string>
    <string name="total_posts_indicator">Total posts: %1$d</string>
    <string name="countdown_over">The wait is over! Enjoy Junamex!</string>

    <plurals name="days">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>

    <plurals name="hours">
        <item quantity="one">hour</item>
        <item quantity="other">hours</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>

    <plurals name="seconds">
        <item quantity="one">second</item>
        <item quantity="other">seconds</item>
    </plurals>

</resources>
