<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/scroll_container"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal"
            android:background="@color/color_primary">

            <TextView
                android:layout_width="@dimen/schedule_width"
                android:layout_height="match_parent"
                android:text="@string/tuesday"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:gravity="center"
                android:textColor="@color/primary_text_color_inverse"/>

            <TextView
                android:layout_width="@dimen/schedule_width"
                android:layout_height="match_parent"
                android:text="@string/wednesday"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:gravity="center"
                android:textColor="@color/primary_text_color_inverse"/>

            <TextView
                android:layout_width="@dimen/schedule_width"
                android:layout_height="match_parent"
                android:text="@string/thursday"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:gravity="center"
                android:textColor="@color/primary_text_color_inverse"/>

            <TextView
                android:layout_width="@dimen/schedule_width"
                android:layout_height="match_parent"
                android:text="@string/friday"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/primary_text_color_inverse"/>

            <TextView
                android:layout_width="@dimen/schedule_width"
                android:layout_height="match_parent"
                android:text="@string/saturday"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:gravity="center"
                android:textColor="@color/primary_text_color_inverse"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/schedule_tues"
                android:layout_width="@dimen/schedule_width"
                android:layout_height="match_parent"/>

            <FrameLayout
                android:id="@+id/schedule_wed"
                android:layout_width="@dimen/schedule_width"
                android:layout_height="match_parent"/>

            <FrameLayout
                android:id="@+id/schedule_thur"
                android:layout_width="@dimen/schedule_width"
                android:layout_height="match_parent"/>

            <FrameLayout
                android:id="@+id/schedule_fri"
                android:layout_width="@dimen/schedule_width"
                android:layout_height="match_parent" />

            <FrameLayout
                android:id="@+id/schedule_sat"
                android:layout_width="@dimen/schedule_width"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>

</HorizontalScrollView>