<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>
    
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/secondary_text_color"
                android:text="@string/notifications"
                android:paddingTop="@dimen/abc_dialog_list_padding_vertical_material"
                android:paddingBottom="@dimen/abc_dialog_list_padding_vertical_material"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_vertical_margin"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vibration_enabled"
                    android:textColor="@color/primary_text_color"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/activity_vertical_margin"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/notifications_vibrate"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/listPreferredItemHeight"
                    android:padding="@dimen/activity_vertical_margin"
                    android:checked="true"/>

            </FrameLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/secondary_text_color"
                android:text="@string/data_usage"
                android:paddingTop="@dimen/abc_dialog_list_padding_vertical_material"
                android:paddingBottom="@dimen/abc_dialog_list_padding_vertical_material"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_vertical_margin"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_vertical_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_refresh_rate"
                        android:textColor="@color/primary_text_color"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:id="@+id/data_usage_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/secondary_text_color"
                        android:text="@string/auto_refresh"/>

                </LinearLayout>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/data_usage"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/listPreferredItemHeight"
                    android:padding="@dimen/activity_vertical_margin"
                    android:checked="true" />

            </FrameLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/secondary_text_color"
                android:text="@string/facebook"
                android:paddingTop="@dimen/abc_dialog_list_padding_vertical_material"
                android:paddingBottom="@dimen/abc_dialog_list_padding_vertical_material"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_vertical_margin"/>

            <TextView
                android:id="@+id/facebook_login"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeight"
                android:text="@string/com_facebook_loginview_log_in_button"
                android:textColor="@color/primary_text_color"
                android:gravity="center_vertical"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:clickable="true"
                android:background="@drawable/abc_list_selector_holo_light"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>