<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <ScrollView
        style="@style/TutorialSize"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_vertical_margin">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="?android:attr/dividerHorizontal"
                    android:showDividers="middle">

                    <TextView
                        android:id="@+id/show_website"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/activity_vertical_margin"
                        android:background="@drawable/schedule_item_selector"
                        android:clickable="true"
                        android:text="@string/comeback_web"
                        android:textColor="@color/secondary_text_color"/>

                    <TextView
                        android:id="@+id/show_facebook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/activity_vertical_margin"
                        android:background="@drawable/schedule_item_selector"
                        android:clickable="true"
                        android:text="@string/comeback_facebook"
                        android:textColor="@color/secondary_text_color"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="?android:attr/dividerHorizontal"
                    android:showDividers="middle">

                    <TextView
                        android:id="@+id/share_app"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/activity_vertical_margin"
                        android:background="@drawable/schedule_item_selector"
                        android:clickable="true"
                        android:text="@string/share_app"
                        android:textColor="@color/secondary_text_color"/>

                    <TextView
                        android:id="@+id/rate_app"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/activity_vertical_margin"
                        android:background="@drawable/schedule_item_selector"
                        android:clickable="true"
                        android:text="@string/rate_app"
                        android:textColor="@color/secondary_text_color"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/show_tutorial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/activity_vertical_margin"
                    android:background="@drawable/schedule_item_selector"
                    android:clickable="true"
                    android:text="@string/show_tutorial"
                    android:textColor="@color/secondary_text_color"/>

            </android.support.v7.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/version_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:textColor="@color/secondary_text_color"
                android:textSize="16sp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
